# kdev-rust

./: .gitignore  CMakeLists.txt  README.md  kdevrustsupport.categories  kdevrustsupport.json  rusthighlighting.cpp  rusthighlighting.h  rustlanguagesupport.cpp  rustlanguagesupport.h  rustparsejob.cpp  rustparsejob.h
app_templates/: CMakeLists.txt
app_templates/rust_binary/: rust_binary.kdevtemplate
app_templates/rust_library/: Cargo.toml  rust_library.kdevtemplate
cmake/: FindASTRedux.cmake  FindRust.cmake
codecompletion/: CMakeLists.txt  completioncontext.cpp  completioncontext.h  completionmodel.cpp  completionmodel.h  completionworker.cpp  completionworker.h
duchain/: CMakeLists.txt  astredux.h  builder.cpp  builder.h  contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  nodetraits.h  parsesession.cpp  parsesession.h  rustducontext.cpp  rustducontext.h  rustnode.cpp  rustnode.h  usebuilder.cpp  usebuilder.h
duchain/navigation/: navigationwidget.cpp  navigationwidget.h
duchain/tests/: CMakeLists.txt  duchaintest.cpp  duchaintest.h
duchain/types/: declarationtypes.h
